validation && synchronize